--- a/stm32-i2c-24c01c.ioc
+++ b/stm32-i2c-24c01c.ioc
@@ -38,8 +38,8 @@ Mcu.Pin24=PA14
 Mcu.Pin25=PG11
 Mcu.Pin26=PG13
 Mcu.Pin27=PB3
-Mcu.Pin28=PB6
-Mcu.Pin29=PB7
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin30=PB9
 Mcu.Pin31=VP_SYS_VS_Systick
@@ -121,12 +121,14 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SW0
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
